scripts/hermes_fuzz_executed/fuzz_22_execution
'use strict';
 
 
<fim_middle>const obj = {a: 4, b: 'world'};
let arg = x => f( x, obj );
 
 
let arg = ( x, y ) => f( x, y );
'use strict';  
const obj = { a: function() { return 'a function'; } };
f( 1, obj.a );
 
 

console.log( 'hermes test passed' );


Execution Output ------------------:
test.js:4:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>const obj = {a: 4, b: 'world'};
^
